<resources>
    <string name="app_name" translatable="false">TapbiSample2021</string>
    <string name="english" translatable="false">English</string>
    <string name="vietnam" translatable="false">Tiếng Việt</string>
    <string name="delete">delete</string>
    <string name="weather_prefix">Current Temparature is %1s %2s </string>
    <string name="weather_error">Get weather information with error, please try again later!</string>
    <string name="weather_no_info">There are no infomation about current weather.</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="delete_message_confirm">Do you want to delete this message?</string>
    <string name="content_new_message">content new message</string>
    <string name="add_sticker">Add sticker</string>
    <string name="add_text">Add Text</string>
    <string name="on_off_stroke">On Off Stroke</string>
    <string name="on_off_shadow">On off shadow</string>
    <string name="toast_text_cut_out">Please put up your hand in closer with first position</string>
    <string name="next">Next</string>
    <string name="select_picture">Select Picture</string>
    <string name="cut">Cut</string>
    <string name="star">Star</string>
    <string name="swap">swap</string>
</resources>