<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal"
        android:background="@drawable/bg_white_radius10"
        android:layout_height="wrap_content"
        android:minHeight="180dp">

        <TextView
            android:id="@+id/tvTitleDialog"
            android:paddingEnd="20dp"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            tools:text="@string/do_you_want_to_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvYes"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvNo"
            android:textAllCaps="true"
            android:background="?selectableItemBackground"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:background="?selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvNo"
            android:textAllCaps="true"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="100dp"
            android:layout_height="match_parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>