<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <vn.tapbi.sample2021kotlin.feature.stickerview.StickerView
            android:id="@+id/stickerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxWidth="150dp"
            app:borderColor="@color/border_color"
            app:showBorder="true"
            app:showIcons="true"
            app:limitScale="1200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/background_edit_sticker" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/face"
                android:layout_gravity="center" />

        </vn.tapbi.sample2021kotlin.feature.stickerview.StickerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@id/stickerView" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/stickerView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddSticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_sticker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stickerView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_text"
            app:layout_constraintTop_toTopOf="@id/btnAddSticker"
            app:layout_constraintStart_toEndOf="@id/btnAddSticker" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOnOffStroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_off_stroke"
            app:layout_constraintTop_toTopOf="@id/btnAddText"
            app:layout_constraintStart_toEndOf="@id/btnAddText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOnOffShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnAddSticker"
            app:layout_constraintStart_toStartOf="@id/btnAddSticker"
            android:text="@string/on_off_shadow"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>